// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/sidebar/channel_filter should match snapshot 1`] = `
<div>
  <div
    class="SidebarFilters"
  >
    <button
      aria-label="unreads filter"
      aria-pressed="false"
      class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 _icon-button--style-inverted_g2m23_145 SidebarFilters_filterButton"
      data-testid="sidebar-unread-filter-button"
      type="button"
    >
      <span
        aria-hidden="true"
        class="_icon-button__icon-slot_g2m23_33"
      >
        <i
          aria-hidden="true"
          class="icon icon-filter-variant"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`components/sidebar/channel_filter should match snapshot if the unread filter is enabled 1`] = `
<div>
  <div
    class="SidebarFilters"
  >
    <button
      aria-label="unreads filter"
      aria-pressed="true"
      class="_icon-button_g2m23_2 _icon-button--size-small_g2m23_69 _icon-button--style-inverted_g2m23_145 _icon-button--toggled_g2m23_25 SidebarFilters_filterButton"
      data-testid="sidebar-unread-filter-button"
      type="button"
    >
      <span
        aria-hidden="true"
        class="_icon-button__icon-slot_g2m23_33"
      >
        <i
          aria-hidden="true"
          class="icon icon-filter-variant"
        />
      </span>
    </button>
  </div>
</div>
`;
